Fix safari spacing

--- a/src/components/Form/styles.module.css
+++ b/src/components/Form/styles.module.css
@@ -1,28 +1,28 @@
 .form {
 	display: flex;
 	flex-direction: column;
-	gap: 1.5rem;
-}
-
-.textInput {
-	display: flex;
-	flex-direction: column;
-	gap: 0.5rem;
 }
 
 .label {
+	display: flex;
+	flex-direction: column;
+}
+
+.labelText {
 	font-size: 0.75rem;
 }
 
 .input {
 	height: 2rem;
 	padding: 0 0.5rem;
+	margin: 0.5rem 0;
 	border: 0.1rem solid var(--color-gray);
 	border-radius: 0.5rem;
 }
 
 .submit {
 	padding: 0.5rem;
+	margin-top: 1rem;
 	color: var(--color-white);
 	background-color: var(--color-primary);
 	border: none;
